[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "Simple Chatbot"
authors = ["amit-bakhru <bakhru@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.4.5"
wikipedia = "^1.4.0"
sklearn = "^0.0"
google = "^2.0.2"
colorlog = "^4.0.2"
click = "^7.0"
Flask = "^1.1.1"
geoip2 = "^2.9.0"
python-whois = "^0.7.2"
python-dateutil = "^2.8.1"
requests = "^2.20.0"
docker-compose = "^1.24.1"
networkx = "^2.4"
pywebcopy = "^6.1.0"
pyquery = "^1.4.1"
w3lib = "^1.21.0"
parse = "^1.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
pytest-instafail = "^0.4.1"
pytest-picked = "^0.4.1"
pytest-tldr = "^0.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
